# gingaar

ginga.ar-2.0/: README
ginga.ar-2.0/config/: CPackConfigBin.cmake  SetupUser.cmake  (+13 more)
ginga.ar-2.0/tool/ginga/: CMakeLists.txt  CPackExtraConfig_VS.cmake  config.h.cin  deps.cmake  ginga.rc  install.GINGA.cmake  sources.cmake  sources.test.cmake
ginga.ar-2.0/tool/ginga/examples/LoadingApplication/: LoadingAnimation.lua  loading.ncl
ginga.ar-2.0/tool/ginga/examples/cocineros/: cocineros.ncl
ginga.ar-2.0/tool/ginga/examples/feeds/: app.lua  feeds.ncl
ginga.ar-2.0/tool/ginga/examples/partido/: futbol.ncl  main.lua
ginga.ar-2.0/tool/ginga/examples/partido/resources/images/FutbolUltimo/: textoBLUE.txt  textoGREEN.txt  textoRED.txt  textoYELLOW.txt  ttextoYELLOW.txt
ginga.ar-2.0/tool/ginga/examples/sokoban/: main.lua  sokoban.ncl
ginga.ar-2.0/tool/ginga/src/: ginga.cpp  ginga.h
ginga.ar-2.0/tool/ginga/test/src/: ginga.cpp  main.cpp  util.cpp
ginga.ar-2.0/tool/ginga/test/src/ncl/connector/simpleAction/: simpleAction01.ncl  simpleAction02.ncl  simpleAction03.ncl  simpleAction04.ncl  simpleAction05.ncl  simpleAction06.ncl  simpleAction07.ncl  simpleAction08.ncl  simpleAction09.ncl  simpleAction10.ncl  simpleAction11.ncl
ginga.ar-2.0/tool/ginga/test/src/ncl/descriptor/focusBorderTransparency/: focusBorderTransparency10.ncl  focusBorderTransparency11.ncl  focusBorderTransparency9.ncl
ginga.ar-2.0/tool/ginga/test/src/ncl/descriptor/fontFamily/: fontFamily.cpp  fontFamily2.ncl  fontFamily5.ncl  fontFamily6.ncl  fontFamily9.ncl
ginga.ar-2.0/tool/ginga/test/src/ncl/descriptor/fontSize/: fontSize.cpp  fontSize4.ncl  fontSize7.ncl
ginga.ar-2.0/tool/ginga/test/src/ncl/invap/buttons/: 41_lua.lua
ginga.ar-2.0/tool/ginga/test/src/ncl/invap/dynamic/: 36_img_position.ncl  37_text_position.ncl  38_html_position.ncl
ginga.ar-2.0/tool/ginga/test/src/ncl/invap/lua/: 30_canvas.lua  32_presentation.lua  33_attribution.lua
ginga.ar-2.0/tool/ginga/test/src/ncl/invap/region/: 07_percentage_pixel.ncl  11_import_regions_base.ncl
ginga.ar-2.0/tool/ginga/test/src/ncl/invap/resources/html/: webpage.html
ginga.ar-2.0/tool/ginga/test/src/ncl/invap/resources/text/: textES.txt
ginga.ar-2.0/tool/ginga/test/src/ncl/media/focusIndex/: focusIndex4.ncl  focusIndex6.ncl
ginga.ar-2.0/tool/ginga/test/src/ncl/media/fontColor/: fontColor.cpp  fontColor9.ncl
ginga.ar-2.0/tool/ginga/test/src/ncl/media/fontFamily/: dinamic_fontFamily.cpp  dinamic_fontFamily3.ncl  fontFamily.cpp  fontFamily2.ncl  fontFamily5.ncl  fontFamily6.ncl
ginga.ar-2.0/tool/ginga/test/src/ncl/media/fontSize/: dinamic_fontSize.cpp  dinamic_fontSize3.ncl  dinamic_fontSize4.ncl  dinamic_fontSize5.ncl  dinamic_fontSize6.ncl  fontSize.cpp  fontSize4.ncl  fontSize7.ncl
ginga.ar-2.0/tool/ginga/test/src/ncl/region/import/: import1.ncl  import2.ncl  import3.ncl
ginga.ar-2.0/tool/ginga/test/src/ncl/settings/default/: focusBorderColor3.ncl  selBorderColor3.ncl
ginga.ar-2.0/tool/ginga/test/text/: miniLorem.txt  sample_chars_UTF-8.txt
ginga.ar-2.0/tool/launcher/: CMakeLists.txt  configuration.h.in  deps.cmake  sources.cmake
ginga.ar-2.0/tool/launcher/include/: AppInfo.h  BrowserPresentationEngine.h  browser_agent.h  browser_port_mw2tv.h  browser_port_tv2mw.h  gingancl_bridge.h  pem_bind_references.h  pem_callbacks.h  pem_types.h  pem_util.h  pem_worker_key.h  thread.h  wqueue.h
ginga.ar-2.0/tool/launcher/src/: AppInfo.cpp  BrowserPresentationEngine.cpp  Thread.cpp  browser_agent.cpp  browser_port_mw2tv.cpp  browser_port_tv2mw.cpp  gingancl_bridge.cpp  pem_bind_references.cpp  pem_callbacks.cpp  pem_launcher.cpp  pem_util.cpp
(+714 files in other folders)
